# CMGT_PrototypeGame

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.bak  Credits.txt  MyGame.cpp  TestGame.cpp  TestGame.hpp  TestSprite.cpp  TestSprite.hpp  main.cpp  readme.md
CMGT_PrototypeGame/: AnimationTest.cpp  AnimationTest.hpp  Attributes.hpp  Button.cpp  Button.hpp  CMGT_PrototypeGame.cpp  CMGT_PrototypeGame.hpp  NewButton.cpp  NewButton.hpp  ScoreManager.cpp  ScoreManager.hpp  Selection.cpp  Selection.hpp  TextInput.cpp  TextInput.hpp  Wellness.hpp  main.cpp  scores.cmgt  testScores.txt
CMGT_PrototypeGame/Data/: ScoreManager.cpp  ScoreManager.hpp
CMGT_PrototypeGame/Deprecated/: Button.cpp  Button.hpp  EraseButton.cpp  EraseButton.hpp  ExitButton.hpp  ReloadButton.cpp  ReloadButton.hpp
CMGT_PrototypeGame/Fighting/: Arena.cpp  Arena.hpp  Character.cpp  Character.hpp  Enemy.cpp  Enemy.hpp  FightManager.cpp  FightManager.hpp
CMGT_PrototypeGame/IO/Buttons/: Button.cpp  Button.hpp  ExitButton.cpp  ReloadButton.cpp  ReloadButton.hpp  StartButton.cpp  StartButton.hpp
CMGT_PrototypeGame/MainMenu/: ScoreCard.cpp  ScoreCard.hpp  ScoreViewer.cpp  ScoreViewer.hpp
CMGT_PrototypeGame/Resources/: .background.kra-autosave.kra  Credits.txt  Credits.txt.bak  background.kra  background.kra~  scoreViewer.png~
CMGT_PrototypeGame/Resources/background/: background.kra
CMGT_PrototypeGame/Resources/reloadButton/: reload.kra~
CMGT_PrototypeGame/Resources/scoreViewer/: scoreViewer.kra  scoreViewer.kra~
CMGT_PrototypeGame/Resources/startButton/: startButton.kra  startButton.kra~
CMGT_PrototypeGame/Screens/: MainMenu.cpp  MainMenu.hpp
CMGT_PrototypeGame/Tweening/: RectangleShapeSizeTween.cpp  Tween.hpp  TweenManager.cpp  TweenManager.hpp
CMGT_PrototypeGame/Utility/: InputHelper.cpp  InputHelper.hpp
Resources/: Credits.txt
Resources/abilities/: .preparation.kra-autosave.kra  restoration.kra~
Resources/reloadButton/: reload.kra
Resources/scoreViewer/: scoreCard.kra  scoreCard.kra~
Resources/startButton/: startButton.kra
SFMLPE/: SFMLPE.hpp
SFMLPE/Core/: AnimationSprite.cpp  AnimationSprite.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Rectangle.cpp  Rectangle.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp  Vector2.hpp
SFMLPE/Core/Drawing/: Sprite.cpp  Sprite.hpp
SFMLPE/Core/EventSystem/: EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp
SFMLPE/Core/Game/: Game.cpp  Game.hpp  MyGame.hpp  WindowSize.hpp  main.cpp
SFMLPE/Core/Managers/: ResourceManager.cpp  ResourceManager.hpp
SFMLPE/WIP/: TextObject.cpp  TextObject.hpp
src/: CMGT_PrototypeGame.cpp  CMGT_PrototypeGame.hpp  main.cpp
src/Arena/: Arena.cpp  Arena.hpp  ConstantManager.hpp  GameOverScreen.cpp  GameOverScreen.hpp  OutputLog.cpp  OutputLog.hpp
src/Audio/: Jukebox.cpp  Jukebox.hpp
src/Character/: Attributes.hpp  Character.cpp  Character.hpp  Wellness.hpp
src/CharacterSelect/: Selection.cpp  Selection.hpp  TextInput.cpp  TextInput.hpp
src/Engine/: AnimationSprite.cpp  AnimationSprite.hpp  Button.cpp  Button.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  Rectangle.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp
src/Engine/EventSystem/: EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp
src/MainMenu/: MainMenu.cpp  MainMenu.hpp  ScoreCard.cpp  ScoreCard.hpp  ScoreViewer.cpp  ScoreViewer.hpp
src/UserData/: SaveLoader.cpp  SaveLoader.hpp  ScoreLoader.cpp  ScoreLoader.hpp
src/Utility/Timers/: Timer.cpp  Timer.hpp  TimerManager.cpp  TimerManager.hpp
src/Utility/Tweening/: RectPosTween.cpp  RectPosTween.hpp  RectangleShapeSizeTween.hpp  SpritePosTween.cpp  SpritePosTween.hpp  Tween.cpp  TweenManager.cpp  TweenManager.hpp
test_example/: TestGame.cpp  TestGame.hpp  TestSprite.cpp  TestSprite.hpp  main.cpp
